--- a/pubman/pubman_presentation/src/main/webapp/search/ui/FilesCriterionCollection.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/ui/FilesCriterionCollection.jspf
@@ -38,7 +38,7 @@
 	<span class="seperator"></span>
 	<div class="free_area0 itemBlockContent hideBlockIfVoid endline">
 
-    <tr:iterator id="fileCriterion" var="fileCriterionBean" value="#{AdvancedSearchEdit.fileCriterionCollection.fileCriterionManager.objectDM}" binding="#{AdvancedSearchEdit.fileCriterionIterator}" varStatus="index">
+    <tr:iterator id="fileCriterion" rows="0" var="fileCriterionBean" value="#{AdvancedSearchEdit.fileCriterionCollection.fileCriterionManager.objectDM}" binding="#{AdvancedSearchEdit.fileCriterionIterator}" varStatus="index">
 
 		<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" >
 			<b class="xLarge_area0_p8 endline labelLine clear">
