--- a/pubman/pubman_presentation/src/main/webapp/viewItem/ContentGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/ContentGroup.jspf
@@ -36,7 +36,7 @@
 		<h:outputText value="#{lbl.EditItem_lblContent}" />
 	</h3>
 	<span class="seperator"></span>
-	<h:panelGroup layout="block" styleClass="free_area0 itemBlockContent endline" rendered="#{ViewItemFull.hasAbstracts || ViewItemFull.hasFreeKeywords}">
+	<h:panelGroup layout="block" styleClass="free_area0 itemBlockContent endline" rendered="#{ViewItemFull.hasAbstracts || ViewItemFull.hasFreeKeywords || ViewItemFull.hasSubjects}">
 
 <%-- Free keywords --%>
 		<div class="free_area0 endline itemLine noTopBorder">
