Fix for PUBMAN-1902
Former-commit-id: f3a02f45444881e5072cdd2a7d4be255f461c5b1

--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Manual.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Manual.jspf
@@ -35,7 +35,7 @@
 
 <div class="clear">
 	<div class="headerSection">
-		
+	<h:outputText value="#{EasySubmissionBreadcrumbPage.beanName}" styleClass="noDisplay" />
 	<jsp:directive.include file="../../header/Breadcrumb.jspf" />
 
 		<div id="contentSkipLinkAnchor" class="clear headLine">
