--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step5Manual.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step5Manual.jspf
@@ -124,18 +124,14 @@
 			<div class="free_area0 itemBlockContent endline">
 
 		<%-- Language of Publication --%>
-				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{!(genre.details_item_language_display == 'false' && genre.details_item_language_form_id == 'easy-submission' || genre.details_item_language_display == 'false' && genre.details_item_language_form_id == 'all')}">
-					<h:panelGroup rendered="#{!(genre.details_item_language_item_language_display == 'false' && genre.details_item_language_item_language_form_id == 'easy-submission' || genre.details_item_language_item_language_display == 'false' && genre.details_item_language_item_language_form_id == 'all')}">
+				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder languageArea" rendered="#{!(genre.details_item_language_display == 'false' && genre.details_item_language_form_id == 'easy-submission' || genre.details_item_language_display == 'false' && genre.details_item_language_form_id == 'all')}">
 					<b class="xLarge_area0_p8 endline labelLine clear">
 						&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.details_item_language_item_language_optional != 'true'}"/><h:outputText value="#{genre.details_item_language_item_language_label}" converter="GenreLabelConverter"/><span class="noDisplay">: </span>
 					</b>
 					<span class="xHuge_area0 xTiny_marginLExcl endline">
-						<input id="inpLanguageOfPublication" type="text" class="large_txtInput tiny_marginRIncl languageSuggest" />
-						<h:selectOneMenu id="selPublicationLanguage" styleClass="xDouble_select replace" value="#{EasySubmission.publicationLanguage}" onchange="$(this).parents('.itemLine').find('.languageSuggest').val('');">
-							<f:selectItems id="selPublicationLanguages" value="#{EasySubmission.publicationLanguages}"/>
-						</h:selectOneMenu>
+						<h:inputText styleClass="large_txtInput tiny_marginRIncl languageSuggest" id="inpLanguageOfPublication" value="#{EasySubmission.publicationLanguage}"/>
+						<h:inputText styleClass="xDouble_txtInput tiny_marginRIncl languageText readonlyInput" value="#{EasySubmission.alternativeLanguageName}" readonly="true"/>
 					</span>
-					</h:panelGroup>
 				</h:panelGroup>
 		
 		<%-- Dates --%>
