Fix for PUBMAN-1955
Former-commit-id: 32729bdc7f9bb2b6c3ee9d0ce59e368da2db5d50

--- a/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
@@ -152,9 +152,9 @@
 						styleClass="noDisplay organizationIdentifier small_marginRExcl" value="#{creator.organization.identifier}" />
 					<h:outputLink styleClass="min_imgBtn ouCard ouLink"
 						rendered="#{creator.organization.identifier != null and creator.organization.identifier != ''}" value="#"
-						onclick="openCenteredWindow('AffiliationDetailPage.jsp?id=#{creator.organization.identifier}', 980, 400, 'Details');return false"></h:outputLink>
+						onclick="openCenteredWindow('AffiliationDetailPage.jsp?id=#{creator.organization.identifier}', 980, 400, 'Details');return false">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h:outputLink>
 					<h:panelGroup rendered="#{creator.organization.identifier == null || creator.organization.identifier == ''}"
-						styleClass="min_imgBtn ouLink"></h:panelGroup>
+						styleClass="min_imgBtn ouLink">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h:panelGroup>
 					<h:panelGroup layout="block">
 						<tr:commandButton id="btnAddCreatorOrg" shortDesc="#{tip.EditItem_addCreator}"
 							styleClass="min_imgBtn groupTool add" action="#{creator.add}"
