--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
@@ -35,7 +35,6 @@
 @media print {
 
 	.messageArea {display: none;}
-
 }
 
 .fullItem {
@@ -275,13 +274,11 @@
 	/*REPLACEMENT HACK FOR IE LESS THAN 6*/
 	* html .fileSection .fileInput input {
 		border-width: 0.10em;
-}
-/*
-	/*REPLACEMENT HACK FOR IE 7
+	}
+	/*REPLACEMENT HACK FOR IE 7*/
 	*:first-child+html .fileSection .fileInput input {
 		border-width: 0.10em;
 	}
-*/
 
 .fileSection .fileLabel {
 	text-align: center;
