--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/externalOverrides.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/externalOverrides.css
@@ -59,13 +59,38 @@
 	padding: 2.83em 0.92em 1.37em 0.92em  !important;
 }
 
+.captionWrapper{
+    position:relative;  
+    margin:auto;  
+    overflow:hidden;
+	}
+
+.editCaption:hover {
+	opacity: 0.95;
+	text-decoration:underline;
+	}
+	
+.editCaption {
+   	position:absolute;
+   	left:0px;
+   	color:#FFFFFF !important;
+   	opacity: 0.4;
+   	width: 7em;
+   	word-spacing:-0.5px;
+   	font-size:11px;
+   	font-weight:bold;
+   	background: #434343; 
+   	line-height: 1.56em;
+	}
+	
+
 /*Richfaces Overwrite*/
 
 .rich-tool-tip {
-		padding: 1.73em 0.92em 0.92em 0.92em;
-        line-height: 2em;
+		padding: 0.92em 0.92em 0.92em 0.92em;
+		text-align: left;
+        line-height: 1.6em;
         background-color: #303030;
-		float: left;
 		position: absolute;
 		display: none;
 }
