--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/lists.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/lists.css
@@ -97,7 +97,7 @@
 .listHeader {
 	overflow: visible;
 	text-align: left;
-	vertical-align:top;
+	vertical-align: top;
 }
 
 .listHeader input {
@@ -126,7 +126,6 @@
 .itemList .checkBoxSelectButton {
 	margin-top: 0.19em;
 	margin-right: 0.19em;
-	background: transparen !important;
 }
 
 	/*REPLACEMENT HACK FOR IE LESS THAN 6*/
@@ -211,10 +210,25 @@
 }
 
 .itemTile .tileIconArea {
-	border: 0.10em;
+	border: 0.10em !important;
 	height: 11.56em;
 	line-height: 11.56em;
-	text-align: center;
+	text-align:center;
+	
+	background: #282828;
+	padding: 18px 11px 0px 0px; 
+
+}
+
+.tileIconAreaSelected {
+	border: 0.10em !important;
+	height: 11.56em;
+	line-height: 11.56em;
+	text-align:center;
+	
+	background: #757575;
+	padding: 18px 11px 0px 0px; 
+
 }
 
 .itemTile .tileIconArea img {
